--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,17 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@types/jquery": "^3.5.13",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-slick": "^0.2.1",
+    "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^7.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
